# cerlib

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  Version.hpp.in  cppcheck.py  doxide.yaml  format-all.sh  mkdocs.yaml  mkdocs.yml
.github/workflows/: cmake-multi-platform.yml
applications/: CMakeLists.txt
applications/platformer/: .clang-tidy  CMakeLists.txt  README.txt
applications/platformer/assets/levels/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt
applications/platformer/src/: Animation.cpp  Animation.hpp  Enemy.cpp  Enemy.hpp  Gem.cpp  Gem.hpp  Level.cpp  Level.hpp  Main.cpp  PlatformerGame.cpp  PlatformerGame.hpp  Player.cpp  Player.hpp  Tile.hpp
applications/testbed/: CMakeLists.txt  Main.cpp
applications/testbed/src/: Main.cpp
cmake/: bin2header.cmake  compiler_flags.cmake  dependencies.cmake  options.cmake  sdl_prebuilt.cmake  util.cmake
cmake/support/: Info.plist.in  cerlib.cmake
docs/: .gitignore  ShadingLanguage.md  contributing.md  getting-started.md  imprint.md  index.md  platformer-demo.md
docs/audio/: playing-sounds.md
docs/deployment/: deploying-to-android.md  deploying-to-web.md
docs/game/: index.md  (+7 more)
include/: cerlib.hpp
mygame/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  MyGame.hpp  files.cmake
mygame/android_project/: .gitignore  local.properties
mygame/android_project/app/: build.gradle
mygame/android_project/app/src/: MainActivitySetup.cpp
mygame/android_project/app/src/main/: AndroidManifest.xml
mygame/android_project/app/src/main/java/com/MyCompany/MyGame/: MainActivity.java
mygame/src/: Main.cpp  MyGame.hpp
src/: CMakeLists.txt
src/audio/: ALSABackend.cpp  Audio.cpp  AudioDevice.cpp  AudioDevice.hpp  AudioSource.cpp  AudioSource.hpp  BiQuadResonantFilter.cpp  Bus.cpp  Bus.hpp  Common.hpp  CoreAudioBackend.cpp  DuckFilter.cpp  EchoFilter.cpp  EqFilter.cpp  FFT.cpp  FFT.hpp  FFTFilter.cpp  Fader.cpp  Fader.hpp  Files.cmake  Filter.cpp  Filter.hpp  FlangerFilter.cpp  FreeverbFilter.cpp  LofiFilter.cpp  MemoryFile.cpp  MemoryFile.hpp  MemoryReader.cpp  MemoryReader.hpp  Misc.cpp  Misc.hpp  Noise.cpp  Noise.hpp  OpenSLESBackend.cpp  Queue.cpp  Queue.hpp  RobotizeFilter.cpp  SDL2Backend.cpp  SDL3Backend.cpp  Sfxr.cpp  (+75 more)
src/contentmanagement/: Content.cpp  ContentManager.cpp  ContentManager.hpp  DDS.cpp  DDS.hpp  DxgiFormatConversion.cpp  DxgiFormatConversion.hpp  FileSystem.cpp  FileSystem.hpp  Files.cmake  ImageLoading.cpp  ImageLoading.hpp
src/game/: Files.cmake  Game.cpp  GameImpl.cpp  GameImpl.hpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
src/graphics/: CBufferPacker.cpp  CBufferPacker.hpp  Drawing.cpp  Files.cmake  Font.cpp  FontImpl.cpp  FontImpl.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsResource.cpp  GraphicsResourceImpl.cpp  GraphicsResourceImpl.hpp  Image.cpp  ImageImpl.cpp  ImageImpl.hpp  ParticleSystem.cpp  Shader.cpp  ShaderImpl.cpp  ShaderImpl.hpp  ShaderParameter.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Tessellation2D.cpp  Tessellation2D.hpp  Text.cpp  TextImpl.cpp  TextImpl.hpp  VertexElement.hpp  stb_image.cpp  stb_image.hpp  stb_image_write.cpp  stb_image_write.hpp  stb_truetype.cpp  stb_truetype.hpp
src/graphics/opengl/: Files.cmake  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.hpp  OpenGLImage.cpp  OpenGLImage.hpp  OpenGLPrerequisites.cpp  OpenGLPrerequisites.hpp  OpenGLPrivateShader.cpp  OpenGLPrivateShader.hpp  OpenGLShaderProgram.cpp  OpenGLShaderProgram.hpp  OpenGLSpriteBatch.cpp  OpenGLSpriteBatch.hpp  OpenGLUserShader.cpp  OpenGLUserShader.hpp  OpenGLVao.cpp  OpenGLVao.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp
src/graphics/opengl/desktop/: glad.cpp  glad.h
src/graphics/opengl/gles/: glad.cpp  glad.h
src/imgui/: CMakeLists.txt  Files.cmake
src/imgui/impl/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/input/: Files.cmake  Gamepad.cpp  GamepadImpl.cpp  GamepadImpl.hpp  Input.cpp  InputImpl.cpp  InputImpl.hpp
src/lua/: Files.cmake  LuaScript.cpp  LuaScriptImpl.cpp  LuaScriptImpl.hpp  LuaState.cpp  LuaStateImpl.cpp  LuaStateImpl.hpp  lapi.cpp  lauxlib.cpp  lbaselib.cpp  lcode.cpp  ldebug.cpp  ldo.cpp  lgc.cpp  liolib.cpp  ljumptab.h  lobject.cpp  lparser.cpp  lstring.cpp  lstrlib.cpp  ltable.cpp  ltm.cpp  luaconf.h  lvm.cpp  sol.hpp
src/math/: Color.cpp  Files.cmake  Math.cpp  Matrix.cpp  Rectangle.cpp  Tween.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/resources/: GrayscaleShader.shd
src/shadercompiler/: AST.cpp  AST.hpp  ASTOptimizer.cpp  ASTOptimizer.hpp  BinOpTable.cpp  BinOpTable.hpp  BuiltInSymbols.cpp  BuiltInSymbols.hpp  Casting.hpp  CodeBlock.cpp  CodeBlock.hpp  Decl.cpp  Decl.hpp  Error.cpp  Error.hpp  Expr.cpp  Expr.hpp  Files.cmake  GLSLShaderGenerator.cpp  GLSLShaderGenerator.hpp  Lexer.cpp  Lexer.hpp  Naming.cpp  Naming.hpp  Parser.cpp  Parser.hpp  Scope.cpp  Scope.hpp  SemaContext.cpp  SemaContext.hpp  ShaderGenerator.cpp  ShaderGenerator.hpp  SourceLocation.cpp  SourceLocation.hpp  Stmt.cpp  Stmt.hpp  TempVarNameGen.cpp  TempVarNameGen.hpp  Token.cpp  Token.hpp  (+6 more)
src/shaders/: SpriteBatchPSDefault.frag  SpriteBatchPSMonochromatic.frag  SpriteBatchVS.vert
src/stb/: CMakeLists.txt  stb.c
src/util/: BinPack.cpp  BinPack.hpp  Files.cmake  InternalError.hpp  InternalExport.hpp  Logging.cpp  MemoryReader.cpp  MemoryReader.hpp  MultiStringHash.hpp  NonCopyable.hpp  OStreamCompat.cpp  Object.cpp  Object.hpp  Platform.cpp  Platform.hpp  SmallVector.hpp  StringUnorderedMap.hpp  StringUtil.cpp  StringUtil.hpp  StringViewUnorderedSet.hpp  ToString.cpp  Util.cpp  Util.hpp  inplace_vector.hpp  narrow_cast.hpp  small_vector.hpp  utf8.hpp
testing/: CMakeLists.txt
testing/src/: ColorTests.cpp  FormattingTests.cpp  LexerTests.cpp  MathTests.cpp  MatrixTests.cpp  ObjectTests.cpp  ParserTests.cpp  RenderingTestHelper.cpp  RenderingTestHelper.hpp  ShaderWriterTests.cpp  SpriteRenderingTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp  Vector4Tests.cpp
(+76 files in other folders)
